# phaseshifts

./: .codacy.yml  .codecov.yml  .coveragerc  .coveralls.yml  .dockerignore  .eslintrc.json  .flake8  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .project  .pydevproject  .pylintrc  .pytest.ini  .readthedocs.yaml  .yamllint  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.md  REPORTING.md  SECURITY.md  TODO.rst  appveyor.yml  bitbucket-pipelines.yml  build_libphsh.bat  cspell.yaml  dev-requirements.txt  environment.yml  jsconfig.json  phaseshifts_build_backend.py  porting-phshift2007-notes.ipynb  pyproject.toml  (+8 more)
.github/: copilot-instructions.md  release-drafter.yml
.github/scripts/: find_python_dll.py
.github/workflows/: CONTRIBUTING.md  build-pyodide-wheel.yml  codeql.yml  deploy-docs-and-wasm.yml  deploy-wasm.yml  publish-docs-to-github-pages.yaml  publish-to-dockerhub.yaml  publish-to-pypi.yaml  release-drafter.yaml  test-package.yml
binder/: apt.txt  postBuild  requirements.txt
doc/: conf.py  input_files.rst.todo  modules.rst
doc/_build/doctrees/: LICENSE.doctree  acknowledgements.doctree  contact.doctree  environment.pickle  introduction.doctree  phshift2007.doctree  scripts.doctree
doc/_build/html/: acknowledgements.html  phshift2007.html  py-modindex.html  scripts.html  search.html
doc/_build/latex/: phaseshifts.out  phaseshifts.tex  phaseshifts.toc  phaseshifts0.1.4-dev.aux  phaseshifts0.1.4-dev.ilg
dockerfiles/: phaseshifts-phsh.dockerfile
docs/: LICENSE.rst  Makefile  acknowledgements.rst  apigen.py  authors.rst  browser_calculator.rst  bvh_package.rst  conf.py  contact.rst  docscrape.py  docscrape_sphinx.py  eeasisss_package.rst  ford-project-phaseshifts.md.in  ford-project-phshift2007.md.in  index.rst  input_files.rst  input_files.rst.todo  installing_phaseshifts.rst  introduction.rst  modules.rst  phshift2007.rst  porting_phshift2007_notes.rst  release.rst  reporting.rst  running.rst  scripts.rst  security.rst  tutorials.rst
docs/included/: about_the_code.rst  alternatives.rst
docs/tutorials/: 01_ni111_quickstart.ipynb  02_zno_wurtzite_phshift2007.ipynb
phaseshifts/: .gitignore  ChangeLog  LICENSE.txt  PhaseShiftsGUI.pyw  README.rst  TODO.rst  __init__.py  __init__.pyi  __main__.py  atorb.py  atorb.pyi  backends.py  backends.pyi  conphas.py  conphas.pyi  elements.py  elements.pyi  errors.py  factories.py  leed.py  leed.pyi  main.pyw  model.py  model.pyi  phaseshifts.pyw  phsh.py  phsh.pyi  phshift2007.py  phshift2007.pyi  settings.py  settings.pyi  setup.cfg  utils.py  wrappers.py
phaseshifts/adaptors/: cleed_adaptors.py
phaseshifts/cli/: __init__.pyi  main.py  main.pyi
phaseshifts/contrib/: .gitignore  xmlrpc_urllib2_transport.py
phaseshifts/core/: atom.py  model.py  unit_cell.py
phaseshifts/cython/: Cython-Build.py  atorb.pyx  conphas.pyx  dependancies.py  leed.pyx  model.pyx  phsh.cpp  phsh.pyx
phaseshifts/doc/: LICENSE.rst  Makefile  acknowledgements.rst  authors.rst  conf.py  contact.rst  docscrape.py  docscrape_sphinx.py  eeasisss_package.rst  gui.rst  index.rst  installing_phaseshifts.rst  introduction.rst  make.bat  modules.rst  phshift2007.rst  scripts.rst
phaseshifts/examples/input_files/: at_Au.i  at_C.i  at_Cl.i  at_H.i  at_I.i  at_Ni.i  at_O.i  at_O_2.i  at_Rh.i  at_W.i  atomic._Au_2x2_Cl.i  atomic.i  atomic_Au_bulk.i  atomic_Au_r3xr3_Cl.i  atomic_Au_r3xr3_I.i  atomic_C2Rh.i  atomic_C6Ni6.i  atomic_CONi.i  atomic_Ni.i  atomic_Ni1x7.i  atomic_Re.i  (+37 more)
phaseshifts/gui/: .gitignore  CreateBulkCrystalDialog.ui  ImportDialog.py  MainWindow.py  MainWindow.ui  ModelBuilder.py  ModelTree.py  ModelWidgets.py  PeriodicTable.py  PeriodicTable.ui  SettingsDialog.py  SettingsDialog.ui  UpdateDialog.py  __main__.py  _rthook_pyqt4.py  elements_gui.py  res.bat  res_rc.py  settings.py
phaseshifts/io/: __init__.py  __init__.pyi  cleedpy_yaml.py  cleedpy_yaml.pyi  model.py  model.pyi
phaseshifts/lib/: .gitignore  CMakeLists.txt  __init__.c  __init__.py  __init__.pyi  _distutils_compat.py  _distutils_compat.pyi  _f2py_shim.py  _fortran_lib.py  _fortran_lib.pyi  _native_build.c  cavpot.py.bak  hartfock.py  hartfock.py.bak  hartfock.pyi  libphsh-f2pywrappers.f  libphsh.f  libphsh.f90  libphsh.pyd  libphsh.pyf  libphsh.pyi  libphsh_old.f  libphshmodule.c  phsh.py
phaseshifts/lib/.phsh.orig/: phsh0.f  phsh1.f  phsh2.f
phaseshifts/lib/EEASiSSS/: EEASiSSS.f90  EEASiSSS.py  EEASiSSS_2015_03_09.f90  EEASiSSS_2015_03_16.f90  EEASiSSS_2015_03_28.f90  __init__.py  hf.f90  hf.py  hf_main.f90
phaseshifts/lib/helpers/: split_ab.py
phaseshifts/test/: testatorb.py
phaseshifts/tests/: testImportDialog.py  test_hartfock.py  testatorb.py  testimports.py  testmodel.py  tests.py  testutils.py
phaseshifts/tools/: debye.py  post_cibuildwheel_check.py
phaseshifts/validation/: __init__.py  __init__.pyi  atorb.py  atorb.pyi
phaseshifts/validators/: cleed_validators.py
phaseshifts/wasm/: __init__.py
test/: .gitignore  atorb_C.txt  test_atorb.py  test_imports.py  test_phshift2007_binaries.py  testatorb.py  testimports.py
test/Re0001/: dataph_Re.d  mufftin_Re_slab.d
tests/: conftest.py  test_atorb.py  test_atorb_validation.py  test_backends.py  test_build_cmake.py  test_cleedpy_import.py  test_cleedpy_yaml_adapter.py  test_conphas_viper.py  test_docs_build.py  test_eeasisss.py  test_eeasisss_integration.py  test_imports.py  test_io_model.py  test_libphsh_fortran_wrapper.py  test_phsh0.py  test_phsh2.py  test_phsh_backend.py  test_phsh_helpers.py  test_phshift2007.py  test_phshift2007_binaries.py  test_wasm_build.py  test_wasm_calculator.py  test_wrappers_helpers.py
tests/Re0001/: at_Re.i  atorb_Re  cluster_Re_slab.i
tests/dftdata/: configurations
wasm/: .gitignore  README.md  build.sh  f90_to_f77.py
wasm/shared/: crystal.js  elements.js  structure-builder.css  structure-builder.js  viewer3d.js
wasm/src/: elements.js  input_format.js  io_paths.js  phase_shift_parser.js  phaseshifts.js
wasm/web/: app.js  index.html  style.css
(+134 files in other folders)
