[project]
name = "phaseshifts"
version = "0.1.8"
description = "Python-based version of the Barbieri/Van Hove phase shift calculation package for LEED/XPD modelling"
authors = [
    { name = "Liam Deacon", email = "liam.m.deacon@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.3",
    "scipy>=0.7",
    "periodictable",
    "typing_extensions"
]
keywords = [
    "phaseshifts",
    "atomic scattering",
    "muffin-tin",
    "diffraction"
]

[project.scripts]
phaseshifts = "phaseshifts.cli:main"

[project.optional-dependencies]
atorb = [
    "mendeleev",
    "elementy"
]
gui = [
    "six",
    "qtpy",
    "pyqt5; python_version < '3.7'",
    "pyside6; python_version >= '3.7'",
    "pyqtgraph"
]
dev = [
    "black",
    "isort",
    "numpy",
    "pre-commit",
    "ruff",
    "scikit-build-core; python_version > '3.11'",
    "wheel"
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-qt"
]
doc = [
    "sphinx>=7,<8",
    "sphinx_rtd_theme",
    "numpydoc",
    "ipykernel"
]

[build-system]
requires = [
    "scikit-build-core>=0.11.5; python_version >= '3.8'",
    "setuptools",
    "wheel",
    "numpy"
]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
build = [
    # NOTE: Python 3.9 is the minimum supported version for cibuildwheel v2
    "cp39-*",
    "cp310-*",
    "cp311-*",
    "cp312-*",
    "cp313-*",
]
skip = [
    "cp38-*",  # FIXME: CPython 3.8 builds fail due to crackfortran issue, see #67
]
test-command = "python -c 'import phaseshifts.lib.libphsh as phsh'"
test-extras = ["test"]
test-requires = ["pytest"]

[tool.cibuildwheel.macos]
archs = "arm64"
skip = [
    # NOTE: Python <3.8 is not supported on macOS arm64 (m1 CPU architecture)
    "cp36-*arm64",
    "cp37-*arm64",
]

[tool.cibuildwheel.macos.environment]
CFLAGS="-std=c99 -fno-strict-aliasing"
CC="clang"
FC="gfortran"
CXX="clang++"
CMAKE_OSX_ARCHITECTURES="$CIBW_ARCH"  # Universal2 build
MACOSX_DEPLOYMENT_TARGET = "15.0"  # Minimum supported macOS version for CIBW

[tool.cibuildwheel.windows]
before-build = [
    "pip install numpy delvewheel",
    "build_linphsh.bat"
]
repair-wheel-command = [
    # NOTE: delvewheel cannot mangle the libraries, stripping does not work
    # "delvewheel show {wheel} -vv",
    # "delvewheel repair -vv -w {dest_dir} {wheel} --no-mangle-all --ignore-in-wheel"
]

[tool.flake8]
max-line-length = 120
extend-ignore = "E203, E501, W503"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
follow_imports = "skip"
show_column_numbers = true

[tool.pylint]
disable = "C0114, C0115, C0116"
max-line-length = 120

[tool.ruff]
target-version = "py38"  # 3.8 is minimum
line-length = 120

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = []
wheel.install-dir = "phaseshifts/lib"
build.targets = ["libphsh"]
# Only install CMake Runtime components (the compiled extension)
install.components = ["Runtime"]
# Completely disable automatic data file discovery and MANIFEST.in processing
experimental = true
wheel.packages = ["phaseshifts"]
# Override source discovery to ignore MANIFEST.in
build-dir = "build"
# Exclude ALL non-essential files from wheels
wheel.exclude = [
    "*.txt", "*.md", "*.rst", "*.yaml", "*.yml", "*.png", "*.pdf",
    "docs/**", "htmlcov/**", "test/**", "tests/**",
    "dockerfiles/**", "*.ipynb", "*.json", "*.xml", "*.bat", "*.sh",
    "MANIFEST.in", "*.cfg", "Makefile", "CMakeLists.txt", "setup.py", "setup.cfg",
    "ChangeLog", "LICENSE.txt", "TODO.rst", "requirements*.txt", "*.lock"
]
sdist.exclude = [
    "htmlcov/**", "*.png", "*.pdf", "docs/_build/**",
    "test/**/__pycache__/**", "tests/**/__pycache__/**"
]
